{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 12,
  "lineage": "6f7e33df-83ef-619b-36ea-c235d6dc8822",
  "resources": [
    {
      "module": "module.linux_vm",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/virtualNetworks/ansibledev-dc/subnets/default",
            "name": "default",
            "network_security_group_id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/networkSecurityGroups/ansibledev-dc",
            "resource_group_name": "ansibledev-dc",
            "virtual_network_name": "ansibledev-dc"
          }
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/networkInterfaces/ansibledev-dc",
            "internal_domain_name_suffix": "3zbzus5nwymejhd3425s0amioa.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/publicIPAddresses/ansibledev-dc",
                "subnet_id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/virtualNetworks/ansibledev-dc/subnets/default"
              }
            ],
            "location": "australiaeast",
            "name": "ansibledev-dc",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "ansibledev-dc"
          },
          "dependencies": [
            "module.linux_vm.azurerm_network_security_group.subnet1nsg1",
            "module.linux_vm.azurerm_public_ip.pip1",
            "module.linux_vm.azurerm_resource_group.rg1",
            "module.linux_vm.azurerm_virtual_network.vnet1",
            "module.linux_vm.data.azurerm_subnet.default"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "subnet1nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/networkSecurityGroups/ansibledev-dc",
            "location": "australiaeast",
            "name": "ansibledev-dc",
            "resource_group_name": "ansibledev-dc",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.linux_vm.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "subnet1nsg1rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow inbound SSH from single Public IP to Ansible Host",
            "destination_address_prefix": "10.0.0.5",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/networkSecurityGroups/ansibledev-dc/securityRules/SSH_allow",
            "name": "SSH_allow",
            "network_security_group_name": "ansibledev-dc",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "ansibledev-dc",
            "source_address_prefix": "0.0.0.0",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "module.linux_vm.azurerm_network_security_group.subnet1nsg1",
            "module.linux_vm.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "ansibledev-dc",
            "fqdn": "ansibledev-dc.australiaeast.cloudapp.azure.com",
            "id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/publicIPAddresses/ansibledev-dc",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "ansibledev-dc",
            "resource_group_name": "ansibledev-dc",
            "sku": "Basic"
          },
          "dependencies": [
            "module.linux_vm.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "guid": "4b9a43ee-b6ed-4418-9c7d-f73f2d018870",
            "id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/virtualNetworks/ansibledev-dc",
            "location": "australiaeast",
            "name": "ansibledev-dc",
            "resource_group_name": "ansibledev-dc",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/virtualNetworks/ansibledev-dc/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/0825a2e6-549b-4c01-948e-b9f311d3c5cc/resourceGroups/ansibledev-dc/providers/Microsoft.Network/networkSecurityGroups/ansibledev-dc"
              }
            ]
          },
          "dependencies": [
            "module.linux_vm.azurerm_network_security_group.subnet1nsg1",
            "module.linux_vm.azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}